Fix for bug 406916 (nsXULElement::AfterSetAttr notifies when it shouldn't). r/sr=sicking